update Zotero bib files & syllabus

--- a/bib/ApproachesRequired.bib
+++ b/bib/ApproachesRequired.bib
@@ -4,8 +4,7 @@
 	volume = {54},
 	issn = {0004-9670},
 	shorttitle = {What is {FRBR}?},
-	url = {http://dx.doi.org/10.1080/00049670.2005.10721710},
-	doi = {10.1080/00049670.2005.10721710},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {From 1992 to 1995 the IFLA Study Group on Functional Requirements for Bibliographic Records (FRBR) developed an entity relationship model as a generalised view of the bibliographic universe, intended to be independent of any cataloguing code or implementation. The FRBR report itself includes a description of the conceptual model (the entities, relationships, and attributes or metadata as we would call them today), a proposed national level bibliographic record for all types of materials, and user tasks associated with the bibliographic resources described in catalogues, bibliographies, and other bibliographic tools. IFLA continues to monitor the application of FRBR and promotes its use and evolution. The IFLA Cataloguing Section’s Working Group on FRBR, chaired by Patrick LeBœuf, has an active online discussion list and a website at http://www.ifla.org/VII/s13/wgfrbr/wgfrbr.htm. The website includes presentations, training tools, a hot-linked bibliography, and much more.},
 	number = {1},
 	urldate = {2016-08-22TZ},
@@ -19,7 +18,7 @@
 @article{kennedy_nine_2008,
 	title = {Nine questions to guide you in choosing a metadata schema.},
 	volume = {9},
-	url = {http://journals.tdl.org/jodi/article/view/226/205},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {1},
 	journal = {Journal of Digital Information},
 	author = {Kennedy, M.R.},
@@ -27,26 +26,26 @@
 }
 
 @misc{maxwell_bibliographic_2010,
-	edition = {Third},
-	title = {Bibliographic control. 497-505.},
-	url = {http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html},
-	journal = {Encyclopedia of Library and Information Sciences,},
+	edition = {Third Edition},
+	title = {Bibliographic control},
+	url = {[Locate full text from http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html]},
+	journal = {Encyclopedia of Library and Information Sciences},
 	author = {Maxwell, R.L.},
 	year = {2010},
-	pages = {497--505.}
+	pages = {497--505}
 }
 
-@article{warren_2015_2015,
-	title = {(2015) {Zen} and the {Art} of {Metadata} {Maintenance}.},
+@article{warren_zen_2015,
+	title = {Zen and the {Art} of {Metadata} {Maintenance}},
 	volume = {18},
-	url = {http://dx.doi.org/10.3998/3336451.0018.305},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Journal of Electronic Publishing},
 	author = {Warren, John},
 	year = {2015}
 }
 
-@article{swoger_what_2012,
+@misc{swoger_what_2012,
 	title = {What is metadata? {A} {Christmas}-themed exploration. {Info} {Culture}.},
 	url = {http://blogs.scientificamerican.com/information- culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/},
 	journal = {Scientific American},
@@ -57,7 +56,7 @@
 @article{olson_power_2001,
 	title = {The power to name: {Representation} in library catalogs},
 	volume = {26},
-	url = {http://www.jstor.org/stable/3175535},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Signs},
 	author = {Olson, Hope A},
