--- a/bib/CollectionsBackground.bib
+++ b/bib/CollectionsBackground.bib
@@ -2,7 +2,7 @@
 @article{lee_what_2000,
 	title = {What is a collection?},
 	volume = {51},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/1097-4571(2000)9999:9999%3C::AID-ASI1018%3E3.0.CO;2-T/full},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {12},
 	urldate = {2016-08-22TZ},
 	journal = {Journal of the American Society for Information Science},
