--- a/bib/CollectionsRequired.bib
+++ b/bib/CollectionsRequired.bib
@@ -2,7 +2,7 @@
 @article{hadro_whats_2013,
 	title = {What’s the problem with self-publishing?},
 	volume = {138},
-	url = {http://lj.libraryjournal.com/2013/04/publishing/whats-the- problem-with-self-publishing/},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {7},
 	journal = {Library Journa},
 	author = {Hadro, J.},
@@ -20,8 +20,7 @@
 @article{hunter_two_1981,
 	title = {Two librarians, an archivist, and 13,000 images: {Collaborating} to build a digital collection.},
 	volume = {80},
-	url = {http://www.library.illinois.edu/orr/?mode=Jhttp://openurl.library.uiuc.edu/s fxlcl3/az]},
-	doi = {10.1086/648464},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {1},
 	journal = {Library Quarterly},
 	author = {Hunter, Legg, N. C. and Oehlerts, J.B.},
@@ -32,7 +31,7 @@
 @article{lewis_stacks_2013,
 	title = {From stacks to the web: the transformation of academic library collecting.},
 	volume = {14},
-	url = {http://crl.acrl.org/content/74/2/159.full.pdf+html},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	doi = {10.5860/crl-309},
 	number = {2},
 	journal = {College \& Research Libraries},
