--- a/bib/GeneralBackground.bib
+++ b/bib/GeneralBackground.bib
@@ -45,7 +45,8 @@ Approved and adopted as policy by the ALA Council, January 27th 2009}
 	address = {Westport, Conn},
 	edition = {3rd},
 	title = {Organization of recorded information},
-	isbn = {159158700X},
+	isbn = {1-59158-700-X},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
 	booktitle = {The {Organization} of {Information}},
 	publisher = {Libraries Unlimited},
 	author = {Taylor, Arlene and Joudrey, Daniel N.},
