--- a/bib/IdentityRequired.bib
+++ b/bib/IdentityRequired.bib
@@ -1,8 +1,20 @@
 
+@article{fidel_user-centered_1994,
+	title = {User-centered indexing},
+	volume = {45},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
+	number = {8},
+	urldate = {2015-08-12TZ},
+	journal = {Journal of the American Society for Information Science},
+	author = {Fidel, Raya},
+	year = {1994},
+	pages = {572--576}
+}
+
 @article{_social_2011,
 	title = {Social reproduction and exclusion in subject indexing: {A} comparison of public library {OPACs} and {LibraryThing} folksonomy.},
 	volume = {67},
-	url = {http://openurl.library.uiuc.edu/sfxlcl3/az},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Journal of Documentation},
 	author = {, J.; Rowley, J., Bates},
@@ -10,33 +22,21 @@
 	pages = {431--448}
 }
 
-@article{gerolimos_m._tagging_2013,
+@article{gerolimos_tagging_2013,
 	title = {Tagging for libraries: {A} review of the effectiveness of tagging systems for library catalogs},
 	volume = {13},
-	url = {http://openurl.library.uiuc.edu/sfxlcl3/az},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {1},
 	journal = {Journal of Library Metadata},
-	author = {Gerolimos, M.},
+	author = {Gerolimos, Michalis},
 	year = {2013},
 	pages = {36--58}
-}
-
-@article{fidel_r._user-centered_1994,
-	title = {User-centered indexing.},
-	volume = {45},
-	url = {http://openurl.library.uiuc.edu/sfxlcl3/az},
-	number = {8},
-	journal = {Journal of the American Society for Information Science},
-	author = {Fidel, R.},
-	year = {1994},
-	pages = {572--576}
 }
 
 @article{gorman_authority_2004,
 	title = {Authority control in the context of bibliographic control in the electronic environment},
 	volume = {38},
-	url = {http://dx.doi.org/10.1300/J104v38n03_03},
-	doi = {10.1300/J104v38n03_03},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3-4},
 	journal = {Cataloging \& Classification Quarterly},
 	author = {Gorman, Michael},
@@ -47,7 +47,7 @@
 @article{olson_power_2001,
 	title = {The power to name: {Representation} in library catalogs},
 	volume = {26},
-	url = {http://www.jstor.org/stable/3175535},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Signs},
 	author = {Olson, Hope A},
