--- a/bib/PreservationRequired.bib
+++ b/bib/PreservationRequired.bib
@@ -2,7 +2,7 @@
 @article{shilton_participatory_2007,
 	title = {Participatory appraisal and arrangement for multicultural archival collections},
 	volume = {63},
-	url = {http://rameshsrinivasan.org/wordpress/wp-content/uploads/2010/03/8-Final-ShiltonSrinivasan-Archivaria.pdf},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	journal = {Archivaria},
 	author = {Shilton, Katie and Srinivasan, Ramesh},
 	year = {2007},
@@ -10,10 +10,10 @@
 }
 
 @article{teper_selection_2014,
-	title = {Selection for {Preservation}.},
+	title = {Selection for {Preservation}},
 	volume = {58},
 	issn = {00242527},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=99263271&site=ehost-live},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {Library preservation programs are at the precipice of transformation. With the increasing availability of digitized content, and the development of shared print repositories, our perceived obligation to the preservation of individual print copies at an institutional level is shifting to a more shared model. Library preservation professionals must now determine how this is influencing our day to day practices. This paper reviews the data collected from a 2012 survey and interprets that data to show how the availability of digital surrogates, libraries' increasing consideration of shared print holdings, and the perceived value of scarcely held content are all influencing preservation selection. [ABSTRACT FROM AUTHOR]},
 	number = {4},
 	journal = {Library Resources \& Technical Services},
