--- a/bib/ResearchRequired.bib
+++ b/bib/ResearchRequired.bib
@@ -26,8 +26,7 @@
 	title = {Are virtual reference services color blind?},
 	volume = {28},
 	issn = {0740-8188},
-	url = {http://www.sciencedirect.com/science/article/pii/S0740818806000995},
-	doi = {10.1016/j.lisr.2006.08.009},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {This study reports an experiment that examines whether librarians provide equitable virtual reference services to diverse user groups. The relative absence of social cues in the virtual environment may mean greater equality of services though at the same time greater inequalities may arise as librarians can become less self-aware online. Findings indicate that the quality of service librarians provide to African Americans and Arabs is lower than the quality of service they provide to Caucasian, Hispanic, Asian, and Jewish students. This study adds to the knowledge of subjective bias in the virtual environment by specifying those that are discriminated against online, identifying the kinds of discriminatory actions of virtual reference librarians, and identifying the type of queries that more frequently result in unbiased service.},
 	number = {4},
 	journal = {Library \& Information Science Research},
@@ -40,8 +39,7 @@
 	title = {Racial differences in the academic library experiences of undergraduates},
 	volume = {25},
 	issn = {0099-1333},
-	url = {http://www.sciencedirect.com/science/article/pii/S0099133399801736},
-	doi = {10.1016/S0099-1333(99)80173-6},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {The College Student Experiences Questionnaire (CSEQ) is an effective instrument to measure differences in the academic library experiences of two different racial groups. Results indicate that African American undergraduate students used the academic library services and resources more frequently than White undergraduate students.},
 	number = {1},
 	journal = {The Journal of Academic Librarianship},
@@ -56,6 +54,7 @@
 	series = {Library and {Information} {Science} {Text} {Series}},
 	title = {Selecting the {Research} {Method}},
 	isbn = {978-1-59158-863-4},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
 	booktitle = {Basic {Research} {Methods} for {Librarians}},
 	publisher = {Libraries Unlimited},
 	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
