--- a/bib/SearchBackground.bib
+++ b/bib/SearchBackground.bib
@@ -1,6 +1,8 @@
 
 @techreport{maloney_expecting_2016,
+	type = {{SAGE} {White} {Paper}},
 	title = {Expecting the {Unexpected}: {Serendipity}, {Discovery}, and the {Scholarly} {Research} {Process}},
+	url = {http://us.sagepub.com/sites/default/files/serrdiscovery.pdf},
 	institution = {SAGE Publishing},
 	author = {Maloney, Alan and Conrad, Lettie Y.},
 	year = {2016}
@@ -10,7 +12,7 @@
 	title = {Serendipity: {The} {Virtual}-{Library} {Experience}},
 	volume = {35},
 	shorttitle = {Serendipity},
-	url = {http://librarytechnology.org/repository/item.pl?id=21506},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {Article: Breeding, Marshall. Serendipity: The Virtual-Library Experience.  Libraries must accommodate a variety of expectations from the patrons who visit their physical facilities or virtual offerings. One dimension of this experience relates to satisfying those with something specific in mind. These patrons may have a favorite author or topic in mind and want specific resources, which might include the next book by that author or an exhaustive set of materials in the bibliography of a research topic. The catalogs and discovery services that libraries present to their users are designed especially for these kinds of information fulfillment activities.},
 	number = {9},
 	urldate = {2016-08-22TZ},
@@ -26,8 +28,7 @@
 	volume = {49},
 	issn = {0306-4573},
 	shorttitle = {Specifics of information retrieval for young users},
-	url = {http://www.sciencedirect.com/science/article/pii/S0306457313000022},
-	doi = {10.1016/j.ipm.2012.12.006},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {In this paper, we present the state of the art in the field of information retrieval that is relevant for understanding how to design information retrieval systems for children. We describe basic theories of human development to explain the specifics of young users, i.e., their cognitive skills, fine motor skills, knowledge, memory and emotional states in so far as they differ from those of adults. We derive the implications these differences have on the design of information retrieval systems for children. Furthermore, we summarize the main findings about children’s search behavior from multiple user studies. These findings are important to understand children’s information needs, their search strategies and usage of information retrieval systems. We also identify several weaknesses of previous user studies about children’s information-seeking behavior. Guided by the findings of these user studies, we describe challenges for the design of information retrieval systems for young users. We give an overview of algorithms and user interface concepts. We also describe existing information retrieval systems for children, in specific web search engines and digital libraries. We conclude with a discussion of open issues and directions for further research. The survey provided in this paper is important both for designers of information retrieval systems for young users as well as for researchers who start working in this field.},
 	number = {4},
 	urldate = {2015-07-16TZ},
@@ -56,7 +57,7 @@
 	copyright = {Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a Creative Commons Attribution - Share Alike 2.5 Canada License that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.},
 	issn = {1911-9593},
 	shorttitle = {Searching {HathiTrust}},
-	url = {https://journal.lib.uoguelph.ca/index.php/perj/article/view/2503},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	language = {en},
 	number = {1},
 	urldate = {2015-07-16TZ},
@@ -72,7 +73,7 @@
 	volume = {12},
 	copyright = {http://creativecommons.org/licenses/by-nd-nc/1.0/},
 	shorttitle = {What is browsing—really?},
-	url = {http://www.informationr.net/ir/12-4/paper330.html},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {Abstract
 
 Introduction. It is argued that the actual elements of typical browsing episodes have not been well captured by common approaches to the concept to date.  
