--- a/bib/SearchRequired.bib
+++ b/bib/SearchRequired.bib
@@ -4,12 +4,12 @@
 	volume = {34},
 	copyright = {Copyright American Library Association Jun 2015},
 	shorttitle = {A {Library} in the {Palm} of {Your} {Hand}},
-	url = {http://search.proquest.com/docview/1691586122/abstract/E2DA6917D1EC48ECPQ/1},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {What is the current state of mobile services among academic libraries of the country's top 100 universities, and what are the best practices for librarians implementing mobile services at the university level? Through in-depth website visits and survey questionnaires, the authors studied each of the top 100 universities' libraries' experiences with mobile services. Results showed that all of these libraries offered at least one mobile service, and the majority offered multiple services. The most common mobile services offered were mobile sites, text messaging services, e-books, and mobile access to databases and the catalog. In addition, chat/IM services, social media accounts and apps were very popular. Survey responses also indicated a trend towards responsive design for websites so that patrons can access the library's full site on any mobile device. Respondents recommend that libraries considering offering mobile services begin as soon as possible as patron demand for these services is expected to increase.},
 	language = {English},
 	number = {2},
 	urldate = {2016-08-22TZ},
-	journal = {Information Technology and Libraries (Online)},
+	journal = {Information Technology and Libraries},
 	author = {Liu, Yan Quan and Briggs, Sarah},
 	month = jun,
 	year = {2015},
@@ -21,8 +21,7 @@
 	title = {Ranking {Search} {Results} in {Library} {Information} {Systems} — {Considering} {Ranking} {Approaches} {Adapted} {From} {Web} {Search} {Engines}},
 	volume = {41},
 	issn = {0099-1333},
-	url = {http://www.sciencedirect.com/science/article/pii/S0099133315001585},
-	doi = {10.1016/j.acalib.2015.07.010},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {For an information retrieval system to be successful, it must have the ability to rank search results. As web search engines are the most often used and — in terms of ranking functionality — the most advanced existing systems, the principles they are based on and the strategies they use can be advantageous when applied to the library context. We categorize ranking factors into six different groups: 1. text statistics, 2. popularity, 3. freshness, 4. locality and availability, 5. content properties and 6. user background. We discuss the basic concepts and assumptions these ranking factors involve and offer potential implementations in the library context. The practice recommended here is for libraries to not only apply selected ranking factors — as existing library information systems already do — but to systematically test for the ranking factors best suited to their systems. We argue for a user-centric view on ranking, because in the end, ranking should be for the benefit of the user, and user preferences may vary across different contexts.},
 	number = {6},
 	urldate = {2016-08-22TZ},
@@ -39,8 +38,7 @@
 	volume = {69},
 	issn = {0022-0418},
 	shorttitle = {A sign of a good book},
-	url = {http://www.emeraldinsight.com/doi/abs/10.1108/JD-04-2012-0041},
-	doi = {10.1108/JD-04-2012-0041},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	language = {en},
 	number = {5},
 	urldate = {2015-07-16TZ},
@@ -52,10 +50,11 @@
 }
 
 @incollection{bawden_encountering_2011,
+	address = {London},
 	title = {Encountering on the road to {Serendip}? {Browsing} in new information environments},
-	url = {https://reserves.library.illinois.edu/},
-	booktitle = {Innovations in {Information} {Retrieval}: {Perspectives} for {Theory} and {Practice} {London}},
-	publisher = {London: Facet Publishing},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
+	booktitle = {Innovations in {Information} {Retrieval}: {Perspectives} for {Theory} and {Practice}},
+	publisher = {Facet Publishing},
 	author = {Bawden, David},
 	year = {2011}
 }
@@ -65,8 +64,7 @@
 	volume = {61},
 	issn = {1559-0682},
 	shorttitle = {Old {Hopes}, {New} {Possibilities}},
-	url = {https://muse.jhu.edu/journals/library_trends/v061/61.1.barton.html},
-	doi = {10.1353/lib.2012.0030},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {Next-generation catalogues can be viewed as the latest manifestation of a tendency in library catalogue history to strive for centralization of access to collections—a single portal for the discovery of library resources. Due to an increasing volume of published materials and the explosion of online information resources during the Internet age, the library does not currently provide centralized access to its various information silos, nor does it provide a user-friendly search and retrieval experience for users whose expectations are shaped by Google and other major commercial Web sites. Searching across library resources is a complicated task, bearing high-attention "transaction costs" for the user, which discourage the use of library resources. Libraries need access systems that minimize complexity, easing discovery and delivery of resources for user populations. Here, the authors review past efforts of centralization of access, consider the potential of next-generation catalogues in the context of this historical tendency toward centralization of access, and describe what goals underlie that centralization.},
 	number = {1},
 	urldate = {2015-07-16TZ},
@@ -82,8 +80,7 @@
 	volume = {29},
 	issn = {07408188},
 	shorttitle = {Fiction access points across computer-mediated book information sources},
-	url = {http://linkinghub.elsevier.com/retrieve/pii/S0740818807000680},
-	doi = {10.1016/j.lisr.2007.03.004},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	language = {en},
 	number = {3},
 	urldate = {2015-07-16TZ},
