--- a/bib/StructuresBackground.bib
+++ b/bib/StructuresBackground.bib
@@ -14,7 +14,7 @@
 	title = {Unicode: {A} {Universal} {Character} {Code}},
 	volume = {5},
 	issn = {0898-901X},
-	url = {http://www.hpl.hp.com/hpjournal/dtj/vol5num3/vol5num3art2.pdf},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Digital Tech. J.},
 	author = {Bettels, Jürgen and Bishop, F. Avery},
