--- a/bib/StructuresRequired.bib
+++ b/bib/StructuresRequired.bib
@@ -3,8 +3,7 @@
 	title = {{eScience} and the need for data standards in the life sciences: in pursuit of objectivity rather than truth},
 	volume = {11},
 	issn = {1477-2000},
-	url = {http://dx.doi.org/10.1080/14772000.2013.818588},
-	doi = {10.1080/14772000.2013.818588},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Systematics and Biodiversity},
 	author = {Vogt, Lars},
@@ -32,7 +31,7 @@
 	title = {Markup {Systems} and the {Future} of {Scholarly} {Text} {Processing}},
 	volume = {30},
 	issn = {0001-0782},
-	url = {http://doi.acm.org.proxy2.library.illinois.edu/10.1145/32206.32209},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	doi = {10.1145/32206.32209},
 	number = {11},
 	journal = {Communications of the ACM},
