--- a/bib/UseUsersBackground.bib
+++ b/bib/UseUsersBackground.bib
@@ -1,10 +1,10 @@
 
-@incollection{marcia_j._bates_information_2009,
+@misc{marcia_j._bates_information_2009,
 	title = {Information {Behavior}},
 	isbn = {978-0-8493-9712-7},
-	url = {http://www.crcnetbase.com/doi/full/10.1081/E-ELIS3-120043263},
+	url = {[Locate full text from http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html]},
 	urldate = {2016-08-22TZ},
-	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
+	journal = {Encyclopedia of Library and Information Sciences, Third Edition},
 	publisher = {CRC Press},
 	author = {{Marcia J. Bates}},
 	month = dec,
@@ -23,14 +23,14 @@
 	pages = {499--542}
 }
 
-@incollection{naumer_information_2009,
+@misc{naumer_information_2009,
+	edition = {Third Edition},
 	title = {Information {Needs}},
-	volume = {null},
 	isbn = {0-8493-9712-X},
-	number = {null},
+	url = {[Locate full text from http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html]},
 	urldate = {2015-05-18},
-	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
-	publisher = {Taylor \& Francis},
+	journal = {Encyclopedia of Library and Information Sciences},
+	publisher = {CRC Press},
 	author = {Naumer, Charles M. and Fisher, Karen E.},
 	month = dec,
 	year = {2009},
@@ -40,6 +40,7 @@
 @article{wilson_information_2008,
 	title = {The information user: past, present and future},
 	volume = {34},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {The emergence of research on various aspects of `information behaviour' is explored and its growth as a subject of academic research is documented. The origin of the field as a potential aid to the development of library and information services is noted, as is the transition from this status to that of a subject for research at PhD level and beyond. The development of the field has thus led to a division between the needs of academia for theoretically grounded work, and the needs of the field of practice for guidance for service development. There is, today, a disconnection between research and practice, to a significant extent: early research was undertaken by practitioners but today academic research dominates the scene. Suggestions are made as to how this disconnection can be repaired.},
 	number = {4},
 	journal = {Journal of Information Science},
@@ -52,6 +53,7 @@
 @article{miksa_information_2009,
 	title = {Information organization and the mysterious information user},
 	volume = {44},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Libraries \& the cultural record},
 	author = {Miksa, Francis},
@@ -63,6 +65,7 @@
 	title = {Children's search roles at home: {Implications} for designers, researchers, educators, and parents},
 	volume = {63},
 	issn = {1532-2890},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {3},
 	journal = {Journal of the American Society for Information Science and Technology},
 	author = {Foss, Elizabeth and Druin, Allison and Brewer, Robin and Lo, Phillip and Sanchez, Luis and Golub, Evan and Hutchinson, Hilary},
@@ -74,7 +77,8 @@
 @incollection{hyder_reading_2014,
 	address = {Farnham, Surrey, England : Burlington, VT},
 	title = {Reading {Groups} and {Social} {Justice}},
-	isbn = {1409447987},
+	isbn = {1-4094-4798-7},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
 	booktitle = {Reading {Groups}, {Libraries} and {Social} {Inclusion}: {Experiences} of {Blind} and {Partially} {Sighted} {People}},
 	publisher = {Ashgate Publishing, Ltd.},
 	author = {Hyder, Eileen Mary},
@@ -86,6 +90,7 @@
 	title = {Health-related information seeking: {Is} it worth it?},
 	volume = {50},
 	issn = {0306-4573},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {5},
 	journal = {Information Processing \& Management},
 	author = {Johnson, J. David},
@@ -103,17 +108,4 @@
 	publisher = {OCLC Research},
 	author = {Connaway, Lynn Silipigni and Faniel, Ixchel M.},
 	year = {2014}
-}
-
-@incollection{connaway_selecting_2010,
-	address = {Santa Barbara, Calif},
-	series = {Library and {Information} {Science} {Text} {Series}},
-	title = {Selecting the {Research} {Method}},
-	isbn = {978-1-59158-863-4},
-	booktitle = {Basic {Research} {Methods} for {Librarians}},
-	publisher = {Libraries Unlimited},
-	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
-	year = {2010},
-	keywords = {LANGUAGE ARTS \& DISCIPLINES / Library \& Information Science / General, Library science--Research--Methodology},
-	pages = {71--106}
 }
