--- a/bib/EvaluationBackground.bib
+++ b/bib/EvaluationBackground.bib
@@ -8,8 +8,7 @@
 	title = {Evaluation of digital libraries},
 	volume = {8},
 	issn = {1432-1300},
-	url = {http://dx.doi.org/10.1007/s00799-007-0011-z},
-	doi = {10.1007/s00799-007-0011-z},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {Digital libraries (DLs) are new and innovative information systems, under constant development and change, and therefore evaluation is of critical importance to ensure not only their correct evolution but also their acceptance by the user and application communities. The Evaluation activity of the DELOS Network of Excellence has performed a large-scale survey of current DL evaluation activities. This study has resulted in a description of the state of the art in the field, which is presented in this paper. The paper also proposes a new framework for the evaluation of DLs, as well as for recording, describing and analyzing the related research field. The framework includes a methodology for the classification of current evaluation procedures. The objective is to provide a set of flexible and adaptable guidelines for DL evaluation.},
 	number = {1},
 	journal = {International Journal on Digital Libraries},
@@ -23,7 +22,7 @@
 	title = {The {Philosophy} of {Information} {Retrieval} {Evaluation}},
 	volume = {2406},
 	isbn = {978-3-540-44042-0},
-	url = {http://dx.doi.org/10.1007/3-540-45691-0_34},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
 	language = {English},
 	booktitle = {Evaluation of {Cross}-{Language} {Information} {Retrieval} {Systems}},
 	publisher = {Springer Berlin Heidelberg},
