--- a/bib/IntroductionRequired.bib
+++ b/bib/IntroductionRequired.bib
@@ -4,7 +4,7 @@
 	series = {Law, {Governance} and {Technology} {Series}},
 	title = {Social {Ontology} and {Documentality}},
 	volume = {1},
-	url = {http://dx.doi.org/10.1007/978-94-007-0120-5_5},
+	url = {[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/]},
 	booktitle = {Approaches to {Legal} {Ontologies}: {Theories}, {Domains}, {Methodologies}},
 	publisher = {Springer Netherlands},
 	author = {Ferraris, Maurizio},
@@ -17,10 +17,12 @@
 	title = {Making {Data} {Work} {Harder}},
 	volume = {131},
 	issn = {03630277},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {The article argues that in a world of constantly increasing digital resources, libraries must work harder to make their data interesting, accessible and relevant. Areas were libraries will benefit by making their data work harder include collaborative collection management, collection views, library decision-making, user behavior and trend spotting. Extensive information about one's own library as well as outside resources can help make resources more useful.},
 	number = {1},
 	journal = {Library Journal},
 	author = {Lavoie, Brian and Dempsey, Lorcan and Connaway, Lynn Silipigni},
+	month = jan,
 	year = {2006},
 	keywords = {DECISION making, INFORMATION resources, LIBRARIES, METADATA, PUBLIC institutions},
 	pages = {40--42}
@@ -50,7 +52,7 @@
 	title = {What is a “document”?},
 	volume = {48},
 	issn = {1097-4571},
-	doi = {10.1002/(SICI)1097-4571(199709)48:9<804::AID-ASI5>3.0.CO;2-V},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {9},
 	journal = {Journal of the American Society for Information Science},
 	author = {Buckland, Michael K.},
@@ -63,7 +65,7 @@
 	title = {The invisible substrate of information science},
 	volume = {50},
 	issn = {1097-4571},
-	doi = {10.1002/(SICI)1097-4571(1999)50:12<1043::AID-ASI1>3.0.CO;2-X},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {12},
 	journal = {Journal of the American Society for Information Science},
 	author = {Bates, Marcia J.},
