--- a/bib/UseUsersRequired.bib
+++ b/bib/UseUsersRequired.bib
@@ -2,6 +2,7 @@
 @article{rhee_reflections_2015,
 	title = {Reflections on archival user studies},
 	volume = {54},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	number = {4},
 	journal = {Reference \& User Services Quarterly},
 	author = {Rhee, Hea Lim},
@@ -14,8 +15,7 @@
 	volume = {63},
 	issn = {1532-2890},
 	shorttitle = {The elusive tale},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/asi.21710/abstract},
-	doi = {10.1002/asi.21710},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {The “Folktales and Facets” project proposes ways to enhance access to folktales—in written and audiovisual formats—through the systematic and rigorous development of user-focused and task-focused models of information representation. Methods used include cognitive task analysis and facet analysis to better understand the information-seeking and information-use practices of people working with folktales and the intellectual dimensions of the domain. Interviews were conducted with 9 informants, representing scholars, storytellers, and teachers who rely on folktales in their professional lives to determine common tasks across user groups. Four tasks were identified: collect, create, instruct, and study. Facet analysis was conducted on the transcripts of these interviews, and a representative set of literature that included subject indexing material and a random stratified set of document surrogates drawn from a collection of folktales, including bibliographic records, introductions, reviews, tables of contents, and bibliographies. Eight facets were identified as most salient for this group of users: agent, association, context, documentation, location, subject, time, and viewpoint. Implications include the need for systems designers to devise methods for harvesting and integrating extant contextual material into search and discovery systems, and to take into account user-desired features in the development of enhanced services for digital repositories.},
 	language = {en},
 	number = {4},
@@ -31,8 +31,7 @@
 @article{connaway_if_2011,
 	title = {"{If} it is too inconvenient {I}'m not going after it:" {Convenience} as a critical factor in information-seeking behaviors},
 	volume = {33},
-	url = {http://sfx.carli.illinois.edu/sfxuiu/az},
-	doi = {http://dx.doi.org/10.1016/j.lisr.2010.12.002},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {In today's fast-paced world, anecdotal evidence suggests that information tends to inundate people, and users of information systems want to find information quickly and conveniently. Empirical evidence for convenience as a critical factor is explored in the data from two multi-year, user study projects funded by the Institute of Museum and Library Services. The theoretical framework for this understanding is founded in the concepts of bounded rationality and rational choice theory, with Savolainen's (2006) concept of time as a context in information seeking, as well as gratification theory, informing the emphasis on the seekers' time horizons. Convenience is a situational criterion in peoples' choices and actions during all stages of the information-seeking process. The concept of convenience can include their choice of an information source, their satisfaction with the source and its ease of use, and their time horizon in information seeking. The centrality of convenience is especially prevalent among the younger subjects (“millennials”) in both studies, but also holds across all demographic categories—age, gender, academic role, or user or non-user of virtual reference services. These two studies further indicate that convenience is a factor for making choices in a variety of situations, including both academic information seeking and everyday-life information seeking, although it plays different roles in different situations.},
 	number = {3},
 	journal = {Library \& Information Science Research},
@@ -45,8 +44,7 @@
 	title = {Reading {Strategies} for {Coping} {With} {Information} {Overload} ca.1550-1700},
 	volume = {64},
 	issn = {1086-3222},
-	url = {http://muse.jhu.edu/content/crossref/journals/journal_of_the_history_of_ideas/v064/64.1blair.html},
-	doi = {10.1353/jhi.2003.0014},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	language = {en},
 	number = {1},
 	urldate = {2015-07-16TZ},
@@ -61,8 +59,7 @@
 	volume = {35},
 	issn = {0165-5515},
 	shorttitle = {The {Dark} {Side} of {Information}},
-	url = {http://dx.doi.org/10.1177/0165551508095781},
-	doi = {10.1177/0165551508095781},
+	url = {[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az]},
 	abstract = {This review article identifies and discusses some of main issues and potential problems - paradoxes and pathologies - around the communication of recorded information, and points to some possible solutions. The article considers the changing contexts of information communication, with some caveats about the identification of `pathologies of information', and analyses the changes over time in the way in which issues of the quantity and quality of information available have been regarded. Two main classes of problems and issues are discussed. The first comprises issues relating to the quantity and diversity of information available: information overload, information anxiety, etc. The second comprises issues relating to the changing information environment with the advent of Web 2.0: loss of identity and authority, emphasis on micro-chunking and shallow novelty, and the impermanence of information. A final section proposes some means of solution of problems and of improvements to the situation.},
 	number = {2},
 	urldate = {2015-07-16TZ},
