substantive change to CollectionsBackground.bib & downstream
Use archive.org copy of blog post

--- a/bib/CollectionsBackground.bib
+++ b/bib/CollectionsBackground.bib
@@ -14,7 +14,7 @@
 @misc{junus_digital_2014,
 	type = {{MSU} {Libraries} {Blogs}},
 	title = {Digital {Collections} and {Accessibility}},
-	url = {http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility},
+	url = {https://web.archive.org/web/20150411015004/http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility},
 	language = {English},
 	urldate = {2015-09-03},
 	journal = {Digital Scholarship Collaborative Sandbox},
