--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -486,7 +486,7 @@ Warren, John. “Zen and the Art of Metadata Maintenance.” *Journal of
 Electronic Publishing* 18, no. 3 (2015). \[Locate full text from
 http://sfx.carli.illinois.edu/sfxuiu/az\].
 
-“Weave: Journal of Library User Experience,” 2014–2016.
+“Weave: Journal of Library User Experience.” Accessed August 22, 2016.
 http://weaveux.org/.
 
 Weinberg, Bella Hass. “Indexing: History and Theory.” *Encyclopedia of
